# tink-cross-lang-tests

./: README.md
cc/: BUILD.bazel  MODULE.bazel  WORKSPACE  aead_impl.cc  aead_impl.h  aead_impl_test.cc  build_server.sh  create.h  create_test.cc  deterministic_aead_impl.cc  deterministic_aead_impl.h  deterministic_aead_impl_test.cc  hybrid_impl.cc  hybrid_impl.h  hybrid_impl_test.cc  jwt_impl.cc  jwt_impl.h  jwt_impl_test.cc  keyset_deriver_impl.cc  keyset_deriver_impl.h  keyset_deriver_impl_test.cc  keyset_impl.cc  keyset_impl.h  keyset_impl_test.cc  mac_impl.cc  mac_impl.h  mac_impl_test.cc  metadata_impl.h  metadata_impl_test.cc  prf_set_impl.cc  prf_set_impl.h  prf_set_impl_test.cc  signature_impl.cc  signature_impl.h  signature_impl_test.cc  streaming_aead_impl.cc  streaming_aead_impl.h  streaming_aead_impl_test.cc  testing_server.cc  testing_server_config.cc  (+2 more)
cc/patches/: google_cloud_cpp.patch  google_cloud_cpp_capture_build_info.patch  google_cloud_cpp_cloud.patch  google_cloud_cpp_gapic.patch  grpc_address_sorting_fix.patch  grpc_xxhash_fix.patch
cc/protos/: BUILD.bazel  testing_api.proto
cross_language/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  extensions.bzl  jwt_validation_test.py  kms_aead_test.py  requirements.in  requirements.txt  run_tests.sh
cross_language/cross_language/: BUILD.bazel  aead_consistency_test.py  aead_test.py  deterministic_aead_test.py  hybrid_encryption_test.py  jwt_kid_test.py  jwt_test.py  jwt_validation_test.py  key_generation_consistency_test.py  key_template_consistency_test.py  key_version_test.py  keyset_read_write_test.py  keyset_validation_test.py  kms_aead_test.py  mac_test.py  prf_set_test.py  primitive_creation_test.py  signature_test.py  streaming_aead_test.py  test_key.py  test_key_test.py
cross_language/cross_language/aead/: BUILD.bazel  aes_ctr_hmac_aead_keys.py  aes_eax_keys.py  aes_gcm_keys.py  aes_gcm_siv_keys.py  chacha20_poly1305_keys.py  creation_consistency_test.py  evaluation_consistency_test.py  x_aes_gcm_keys.py  xchacha20_poly1305_keys.py
cross_language/cross_language/daead/: BUILD.bazel  aes_siv_keys.py  creation_consistency_test.py  evaluation_consistency_test.py
cross_language/cross_language/hybrid/: BUILD.bazel  creation_consistency_test.py  ecies_keys.py  evaluation_consistency_test.py  hpke_keys.py
cross_language/cross_language/json_keyset/: BUILD.bazel  json_keyset_parsing_test.py
cross_language/cross_language/jwt/: BUILD.bazel  jwt_ecdsa_keys.py  jwt_hmac_keys.py  jwt_mac_creation_consistency_test.py  jwt_mac_evaluation_consistency_test.py  jwt_rsa_ssa_pkcs1_keys.py  jwt_rsa_ssa_pss_keys.py  jwt_signature_creation_consistency_test.py  jwt_signature_evaluation_consistency_test.py
cross_language/cross_language/keyderivation/: BUILD.bazel  key_derivation_test.py
cross_language/cross_language/mac/: BUILD.bazel  aes_cmac_keys.py  creation_consistency_test.py  evaluation_consistency_test.py  hmac_keys.py
cross_language/cross_language/prf/: BUILD.bazel  aes_cmac_prf_keys.py  creation_consistency_test.py  evaluation_consistency_test.py  hkdf_prf_keys.py  hmac_prf_keys.py
cross_language/cross_language/signature/: BUILD.bazel  creation_consistency_test.py  ecdsa_keys.py  ed25519_keys.py  evaluation_consistency_test.py  mldsa_keys.py  rsa_ssa_pkcs1_keys.py  rsa_ssa_pkcs1_test.py  rsa_ssa_pss_keys.py  slhdsa_keys.py
cross_language/cross_language/streaming_aead/: BUILD.bazel  aes_ctr_hmac_streaming_key_test.py  aes_gcm_hkdf_streaming_key_test.py
cross_language/cross_language/tink_config/: BUILD.bazel  __init__.py  _helpers.py  _helpers_test.py  _key_types.py  _key_types_test.py
cross_language/cross_language/util/: BUILD.bazel  _primitives.py  _primitives_test.py  key_util.py  key_util_test.py  testing_servers.py  testing_servers_test.py  utilities.py  utilities_test.py
cross_language/cross_language/util/test_keys/: BUILD.bazel  __init__.py  _create_test_key.py  _create_test_key_test.py  _test_keys_container.py  _test_keys_container_test.py  _test_keys_db.py
cross_language/mac/: BUILD.bazel  aes_cmac_keys.py  creation_consistency_test.py  evaluation_consistency_test.py  hmac_keys.py
cross_language/testdata/aws/: README.md
cross_language/tink_config/: __init__.py  _helpers.py  _helpers_test.py  _key_types.py
cross_language/util/: supported_key_types.py
go/: BUILD.bazel  WORKSPACE  aead_service.go  annotated_keyset.go  build_server.sh  daead_service.go  go.mod  go.sum  hybrid_service.go  jwt_service.go  jwt_service_test.go  keyset_deriver_service.go  keyset_deriver_service_test.go  keyset_service.go  kms.go  mac_service.go  metadata_service.go  prf_set_service.go  services_test.go  signature_service.go  streaming_aead_service.go  testing_server.go
go/kms/: BUILD.bazel  kms.go
go/proto/: testing_api.proto
go/protos/: testing_api.proto
go/protos/testing_api_go_grpc/: BUILD.bazel  testing_api.pb.go  testing_api.proto  testing_api_grpc.pb.go
go/services/: BUILD.bazel  aead_service.go  annotated_keyset.go  daead_service.go  jwt_service.go  keyset_deriver_service.go  keyset_service.go  mac_service.go
go/services/internal/kmsaead/: BUILD.bazel  kmsaead.go  kmsaead_test.go
java_src/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  build_server.sh
java_src/java/com/google/crypto/tink/testing/: AeadServiceImpl.java  DeterministicAeadServiceImpl.java  HybridServiceImpl.java  JwtServiceImpl.java  KeysetDeriverServiceImpl.java  KeysetServiceImpl.java  Kms.java  MacServiceImpl.java  PrfSetServiceImpl.java  SignatureServiceImpl.java  StreamingAeadServiceImpl.java  TestingServer.java  Util.java
java_src/protos/: testing_api.proto
kokoro/gcp_ubuntu/: run_tests.sh
kokoro/gcp_ubuntu/bazel/: run_tests.sh
kokoro/testutils/: cross_lang_test_container_images.sh  py_test_container_images.sh
python/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  build_server.sh  extensions.bzl  jwt_service.py  kms.py  requirements.in  requirements.txt  services.py  services_test.py  testing_server.py
python/patches/: grpc_build_system_fix.patch
python/protos/: testing_api.proto
(+1 files in other folders)
