load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_grpc_library")

package(
    default_testonly = 1,
    default_visibility = ["//visibility:private"],
)

licenses(["notice"])

cpp_grpc_library(
    name = "testing_api_cpp_library",
    protos = ["//protos:testing_api_proto"],
    service_namespace = "testing_api",
)

cc_library(
    name = "metadata_impl",
    srcs = ["metadata_impl.cc"],
    hdrs = ["metadata_impl.h"],
    deps = [
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:version",
    ],
)

cc_test(
    name = "metadata_impl_test",
    srcs = ["metadata_impl_test.cc"],
    deps = [
        ":metadata_impl",
        ":testing_api_cpp_library",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "keyset_impl",
    srcs = ["keyset_impl.cc"],
    hdrs = ["keyset_impl.h"],
    deps = [
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/types:optional",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:key_status",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:proto_parameters_format",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/daead:deterministic_aead_key_templates",
        "@tink_cc//tink/hybrid:hybrid_key_templates",
        "@tink_cc//tink/json:json_keyset_reader",
        "@tink_cc//tink/json:json_keyset_writer",
        "@tink_cc//tink/jwt:jwt_key_templates",
        "@tink_cc//tink/mac:mac_key_templates",
        "@tink_cc//tink/prf:prf_key_templates",
        "@tink_cc//tink/signature:composite_ml_dsa_parameters",
        "@tink_cc//tink/signature:ml_dsa_parameters",
        "@tink_cc//tink/signature:signature_key_templates",
        "@tink_cc//tink/streamingaead:streaming_aead_key_templates",
    ],
)

cc_test(
    name = "keyset_impl_test",
    srcs = ["keyset_impl_test.cc"],
    deps = [
        ":keyset_impl",
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:json_keyset_reader",
        "@tink_cc//tink:json_keyset_writer",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/config:key_gen_config_2026",
        "@tink_cc//tink/hybrid:hybrid_key_templates",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_library(
    name = "aead_impl",
    srcs = ["aead_impl.cc"],
    hdrs = ["aead_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
    ],
)

cc_test(
    name = "aead_impl_test",
    srcs = ["aead_impl_test.cc"],
    deps = [
        ":aead_impl",
        ":testing_api_cpp_library",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/config:key_gen_config_2026",
    ],
)

cc_library(
    name = "deterministic_aead_impl",
    srcs = ["deterministic_aead_impl.cc"],
    hdrs = ["deterministic_aead_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
    ],
)

cc_test(
    name = "deterministic_aead_impl_test",
    srcs = ["deterministic_aead_impl_test.cc"],
    deps = [
        ":deterministic_aead_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/config:key_gen_config_2026",
        "@tink_cc//tink/daead:deterministic_aead_key_templates",
    ],
)

cc_library(
    name = "streaming_aead_impl",
    srcs = ["streaming_aead_impl.cc"],
    hdrs = ["streaming_aead_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
        "@tink_cc//tink/util:istream_input_stream",
        "@tink_cc//tink/util:ostream_output_stream",
        "@tink_cc//tink/util:status",
    ],
)

cc_test(
    name = "streaming_aead_impl_test",
    srcs = ["streaming_aead_impl_test.cc"],
    deps = [
        ":streaming_aead_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/streamingaead:key_gen_config_2026",
        "@tink_cc//tink/streamingaead:streaming_aead_key_templates",
    ],
)

cc_library(
    name = "mac_impl",
    srcs = ["mac_impl.cc"],
    hdrs = ["mac_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
    ],
)

cc_test(
    name = "mac_impl_test",
    srcs = ["mac_impl_test.cc"],
    deps = [
        ":mac_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/config:key_gen_config_2026",
        "@tink_cc//tink/mac:mac_key_templates",
    ],
)

cc_library(
    name = "hybrid_impl",
    srcs = ["hybrid_impl.cc"],
    hdrs = ["hybrid_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
        "@tink_cc//tink/util:statusor",
    ],
)

cc_test(
    name = "hybrid_impl_test",
    srcs = ["hybrid_impl_test.cc"],
    deps = [
        ":hybrid_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/config:key_gen_config_2026",
        "@tink_cc//tink/hybrid:hybrid_key_templates",
    ],
)

cc_library(
    name = "signature_impl",
    srcs = ["signature_impl.cc"],
    hdrs = ["signature_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
    ],
)

cc_test(
    name = "signature_impl_test",
    srcs = ["signature_impl_test.cc"],
    deps = [
        ":signature_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/signature:key_gen_config_2026",
        "@tink_cc//tink/signature:signature_key_templates",
    ],
)

cc_library(
    name = "prf_set_impl",
    srcs = ["prf_set_impl.cc"],
    hdrs = ["prf_set_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/base:core_headers",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:tink_cc",
    ],
)

cc_test(
    name = "prf_set_impl_test",
    srcs = ["prf_set_impl_test.cc"],
    deps = [
        ":prf_set_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/config:key_gen_config_2026",
        "@tink_cc//tink/prf:prf_key_templates",
    ],
)

cc_library(
    name = "jwt_impl",
    srcs = ["jwt_impl.cc"],
    hdrs = ["jwt_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink/jwt:jwk_set_converter",
        "@tink_cc//tink/jwt:jwt_mac",
        "@tink_cc//tink/jwt:jwt_public_key_sign",
        "@tink_cc//tink/jwt:jwt_public_key_verify",
        "@tink_cc//tink/jwt:jwt_validator",
        "@tink_cc//tink/jwt:raw_jwt",
        "@tink_cc//tink/jwt:verified_jwt",
    ],
)

cc_test(
    name = "jwt_impl_test",
    srcs = ["jwt_impl_test.cc"],
    deps = [
        ":jwt_impl",
        ":testing_api_cpp_library",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink/jwt:jwt_key_templates",
        "@tink_cc//tink/jwt:jwt_mac_key_gen_config_2026",
        "@tink_cc//tink/jwt:jwt_signature_key_gen_config_2026",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_library(
    name = "keyset_deriver_impl",
    srcs = ["keyset_deriver_impl.cc"],
    hdrs = ["keyset_deriver_impl.h"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/status:statusor",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink/keyderivation:keyset_deriver",
    ],
)

cc_test(
    name = "keyset_deriver_impl_test",
    srcs = ["keyset_deriver_impl_test.cc"],
    deps = [
        ":keyset_deriver_impl",
        ":testing_api_cpp_library",
        "@googletest//:gtest_main",
        "@tink_cc//tink/config:tink_config",
        "@tink_cc//tink/keyderivation:key_derivation_config",
        "@tink_cc//tink/util:test_matchers",
    ],
)

cc_library(
    name = "testing_server_config",
    srcs = ["testing_server_config.cc"],
    hdrs = ["testing_server_config.h"],
    deps = [
        "@abseil-cpp//absl/log:absl_check",
        "@tink_cc//tink:configuration",
        "@tink_cc//tink:key_gen_configuration",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/aead:x_aes_gcm_proto_serialization",
        "@tink_cc//tink/aead/internal:config_2026",
        "@tink_cc//tink/aead/internal:key_gen_config_2026",
        "@tink_cc//tink/aead/internal:kms_aead_config_2026",
        "@tink_cc//tink/aead/internal:kms_aead_key_gen_config_2026",
        "@tink_cc//tink/daead:deterministic_aead_config",
        "@tink_cc//tink/daead/internal:config_2026",
        "@tink_cc//tink/daead/internal:key_gen_config_2026",
        "@tink_cc//tink/hybrid:hpke_config",
        "@tink_cc//tink/hybrid:hybrid_config",
        "@tink_cc//tink/hybrid/internal:config_2026",
        "@tink_cc//tink/hybrid/internal:key_gen_config_2026",
        "@tink_cc//tink/jwt:jwt_mac_config",
        "@tink_cc//tink/jwt:jwt_signature_config",
        "@tink_cc//tink/jwt/internal:jwt_mac_config_2026",
        "@tink_cc//tink/jwt/internal:jwt_mac_key_gen_config_2026",
        "@tink_cc//tink/jwt/internal:jwt_signature_config_2026",
        "@tink_cc//tink/jwt/internal:jwt_signature_key_gen_config_2026",
        "@tink_cc//tink/keyderivation:key_derivation_config",
        "@tink_cc//tink/keyderivation/internal:config_2026",
        "@tink_cc//tink/keyderivation/internal:key_gen_config_2026",
        "@tink_cc//tink/mac/internal:config_2026",
        "@tink_cc//tink/mac/internal:key_gen_config_2026",
        "@tink_cc//tink/prf:prf_config",
        "@tink_cc//tink/prf/internal:config_2026",
        "@tink_cc//tink/prf/internal:key_gen_config_2026",
        "@tink_cc//tink/signature:signature_config",
        "@tink_cc//tink/signature/internal:config_2026",
        "@tink_cc//tink/signature/internal:key_gen_config_2026",
        "@tink_cc//tink/streamingaead:streaming_aead_config",
        "@tink_cc//tink/streamingaead/internal:config_2026",
        "@tink_cc//tink/streamingaead/internal:key_gen_config_2026",
    ],
)

cc_test(
    name = "testing_server_config_test",
    srcs = ["testing_server_config_test.cc"],
    deps = [
        ":testing_server_config",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest_main",
        "@tink_cc//tink:aead",
        "@tink_cc//tink:configuration",
        "@tink_cc//tink:deterministic_aead",
        "@tink_cc//tink:hybrid_decrypt",
        "@tink_cc//tink:hybrid_encrypt",
        "@tink_cc//tink:mac",
        "@tink_cc//tink:public_key_sign",
        "@tink_cc//tink:public_key_verify",
        "@tink_cc//tink:streaming_aead",
        "@tink_cc//tink/internal:configuration_impl",
        "@tink_cc//tink/internal:key_type_info_store",
        "@tink_cc//tink/internal:keyset_wrapper_store",
        "@tink_cc//tink/jwt:jwt_mac",
        "@tink_cc//tink/jwt:jwt_public_key_sign",
        "@tink_cc//tink/jwt:jwt_public_key_verify",
        "@tink_cc//tink/keyderivation:keyset_deriver",
        "@tink_cc//tink/prf:prf_set",
    ],
)

cc_library(
    name = "create",
    hdrs = ["create.h"],
    deps = [
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@tink_cc//tink:binary_keyset_reader",
        "@tink_cc//tink:cleartext_keyset_handle",
        "@tink_cc//tink:configuration",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:keyset_reader",
        "@tink_cc//tink/config:global_registry",
    ],
)

cc_test(
    name = "create_test",
    srcs = ["create_test.cc"],
    deps = [
        ":create",
        ":testing_api_cpp_library",
        "@googletest//:gtest_main",
        "@tink_cc//tink:binary_keyset_writer",
        "@tink_cc//tink:keyset_handle",
        "@tink_cc//tink:mac",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/aead:aead_key_templates",
        "@tink_cc//tink/config:key_gen_config_2026",
    ],
)

cc_binary(
    name = "testing_server",
    srcs = ["testing_server.cc"],
    deps = [
        ":aead_impl",
        ":deterministic_aead_impl",
        ":hybrid_impl",
        ":jwt_impl",
        ":keyset_deriver_impl",
        ":keyset_impl",
        ":mac_impl",
        ":metadata_impl",
        ":prf_set_impl",
        ":signature_impl",
        ":streaming_aead_impl",
        ":testing_api_cpp_library",
        ":testing_server_config",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@com_github_grpc_grpc//:grpc++",
        "@tink_cc//tink/aead:aead_config",
        "@tink_cc//tink/prf:prf_config",
        "@tink_cc//tink/util:fake_kms_client",
        "@tink_cc_gcpkms//tink/integration/gcpkms:gcp_kms_client",
    ],
)
