# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "tink_testing_cc")

bazel_dep(
    name = "rules_cc",
    version = "0.2.9",
)
bazel_dep(
    name = "rules_go",
    version = "0.61.1",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
)
bazel_dep(name = "tink_cc")
bazel_dep(name = "tink_cc_gcpkms")
bazel_dep(
    name = "protobuf",
    version = "30.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_proto_grpc",
    version = "5.7.1",
)
bazel_dep(
    name = "rules_proto_grpc_cpp",
    version = "5.7.1",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
)

# We explicitly declare grpc so we can patch it. Note: once grpc has
# https://github.com/grpc/grpc/commit/d54219b508423f0a2ff6a0b98c16fb6dafd44b84 we can remove the
#dependency on grpc here (since it's indirect)
bazel_dep(
    name = "grpc",
    version = "1.81.1",
    repo_name = "com_github_grpc_grpc",
)

local_path_override(
    module_name = "tink_cc",
    path = "../../tink_cc",
)

local_path_override(
    module_name = "tink_cc_gcpkms",
    path = "../../tink_cc_gcpkms",
)

# We don't need grpc override because we use 1.76.0 which is patched in BCR.

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "//:patches/grpc_address_sorting_fix.patch",
        "//:patches/grpc_xxhash_fix.patch",
        "//:patches/grpc_build_system_fix.patch",
    ],
    version = "1.81.1",
)

single_version_override(
    module_name = "c-ares",
    version = "1.34.6",
)

single_version_override(
    module_name = "envoy_api",
    version = "0.0.0-20251105-4a2b9a3",
)

single_version_override(
    module_name = "protoc-gen-validate",
    version = "1.2.1.bcr.2",
)


single_version_override(
    module_name = "google_cloud_cpp",
    patch_strip = 1,
    patches = [
        "//:patches/google_cloud_cpp.patch",
        "//:patches/google_cloud_cpp_gapic.patch",
        "//:patches/google_cloud_cpp_cloud.patch",
        "//:patches/google_cloud_cpp_capture_build_info.patch",
    ],
    version = "3.0.0-rc1",
)
