load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

go_grpc_library(
    name = "testing_api_go_grpc",
    importpath = "github.com/tink-crypto/tink-cross-lang-tests/go/protos/testing_api_go_grpc",
    protos = ["//protos:testing_api_proto"],
)

go_library(
    name = "services",
    srcs = [
        "aead_service.go",
        "annotated_keyset.go",
        "daead_service.go",
        "hybrid_service.go",
        "jwt_service.go",
        "keyset_service.go",
        "mac_service.go",
        "metadata_service.go",
        "prf_set_service.go",
        "signature_service.go",
        "streaming_aead_service.go",
    ],
    importpath = "github.com/tink-crypto/tink-cross-lang-tests/go/services",
    deps = [
        ":testing_api_go_grpc",
        "@com_github_tink_crypto_tink_go_v2//aead",
        "@com_github_tink_crypto_tink_go_v2//aead/internal/testing/kmsaead",
        "@com_github_tink_crypto_tink_go_v2//core/registry",
        "@com_github_tink_crypto_tink_go_v2//daead",
        "@com_github_tink_crypto_tink_go_v2//hybrid",
        "@com_github_tink_crypto_tink_go_v2//insecurecleartextkeyset",
        "@com_github_tink_crypto_tink_go_v2//jwt",
        "@com_github_tink_crypto_tink_go_v2//keyset",
        "@com_github_tink_crypto_tink_go_v2//mac",
        "@com_github_tink_crypto_tink_go_v2//prf",
        "@com_github_tink_crypto_tink_go_v2//proto/tink_go_proto",
        "@com_github_tink_crypto_tink_go_v2//signature",
        "@com_github_tink_crypto_tink_go_v2//streamingaead",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_test(
    name = "services_test",
    size = "small",
    srcs = [
        "jwt_service_test.go",
        "services_test.go",
    ],
    deps = [
        ":services",
        ":testing_api_go_grpc",
        "@com_github_google_go_cmp//cmp",
        "@com_github_tink_crypto_tink_go_v2//aead",
        "@com_github_tink_crypto_tink_go_v2//daead",
        "@com_github_tink_crypto_tink_go_v2//hybrid",
        "@com_github_tink_crypto_tink_go_v2//jwt",
        "@com_github_tink_crypto_tink_go_v2//keyset",
        "@com_github_tink_crypto_tink_go_v2//mac",
        "@com_github_tink_crypto_tink_go_v2//prf",
        "@com_github_tink_crypto_tink_go_v2//signature",
        "@com_github_tink_crypto_tink_go_v2//streamingaead",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_library(
    name = "kms",
    srcs = ["kms.go"],
    importpath = "github.com/tink-crypto/tink-cross-lang-tests/go/kms",
    deps = [
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_tink_crypto_tink_go_awskms_v2//integration/awskms",
        "@com_github_tink_crypto_tink_go_gcpkms_v2//integration/gcpkms",
        "@com_github_tink_crypto_tink_go_hcvault_v2//integration/hcvault",
        "@com_github_tink_crypto_tink_go_v2//core/registry",
        "@com_github_tink_crypto_tink_go_v2//testing/fakekms",
        "@com_github_tink_crypto_tink_go_v2//tink",
        "@org_golang_google_api//option",
    ],
)

go_binary(
    name = "testing_server",
    srcs = [
        "testing_server.go",
    ],
    deps = [
        ":kms",
        ":services",
        ":testing_api_go_grpc",
        "@org_golang_google_grpc//:grpc",
    ],
)
