load("@io_bazel_rules_go//go:def.bzl", "go_binary")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

go_binary(
    name = "testing_server",
    srcs = [
        "testing_server.go",
    ],
    deps = [
        "//kms",
        "//protos/testing_api_go_grpc",
        "//services",
        "@org_golang_google_grpc//:grpc",
    ],
)
