# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################

module(name = "tink_testing_java")

bazel_dep(
    name = "protobuf",
    version = "30.1",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "rules_proto_grpc",
    version = "5.7.1",
)
bazel_dep(name = "grpc-java", version = "1.75.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(
    name = "googletest",
    version = "1.17.0",
)
bazel_dep(
    name = "rules_android",
    version = "0.6.6",
    repo_name = "build_bazel_rules_android",
)
bazel_dep(name = "tink_java")
bazel_dep(name = "tink_java_awskms")
bazel_dep(name = "tink_java_gcpkms")
bazel_dep(name = "tink_java_hcvault")

local_path_override(
    module_name = "tink_java",
    path = "../../tink_java",
)

local_path_override(
    module_name = "tink_java_awskms",
    path = "../../tink_java_awskms",
)

local_path_override(
    module_name = "tink_java_gcpkms",
    path = "../../tink_java_gcpkms",
)

local_path_override(
    module_name = "tink_java_hcvault",
    path = "../../tink_java_hcvault",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # go/keep-sorted start
        "args4j:args4j:2.33",
        # go/keep-sorted end
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "grpc-java",
        "protobuf",
        "rules_proto_grpc_java",
        "tink_java",
        "tink_java_awskms",
        "tink_java_gcpkms",
        "tink_java_hcvault",
        "tink_testing_java",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
