module(name = "testing_python")

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "grpc", version = "1.81.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_python", version = "1.4.0")
bazel_dep(name = "tink_cc")
bazel_dep(name = "tink_py")
bazel_dep(name = "protobuf", version = "30.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto_grpc", version = "5.7.1")
bazel_dep(name = "rules_proto_grpc_python", version = "5.7.1")

local_path_override(
    module_name = "tink_cc",
    path = "../../tink_cc",
)

local_path_override(
    module_name = "tink_py",
    path = "../../tink_py",
)

envoy_api_extension = use_extension("//:extensions.bzl", "envoy_api_extension")
use_repo(envoy_api_extension, "envoy_api")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
use_repo(pip, "tink_py_pip_deps")

pip.parse(
    hub_name = "testing_python_pip_deps",
    python_version = "3.12",
    requirements_lock = "@testing_python//:requirements.txt",
)
use_repo(pip, "testing_python_pip_deps")

single_version_override(
    module_name = "grpc",
    patch_strip = 1,
    patches = [
        "//:patches/grpc_address_sorting_fix.patch",
        "//:patches/grpc_xxhash_fix.patch",
        "//:patches/grpc_build_system_fix.patch",
    ],
    version = "1.81.1",
)

single_version_override(
    module_name = "c-ares",
    version = "1.34.6",
)

single_version_override(
    module_name = "envoy_api",
    version = "0.0.0-20251105-4a2b9a3",
)

single_version_override(
    module_name = "protoc-gen-validate",
    version = "1.2.1.bcr.2",
)

single_version_override(
    module_name = "abseil-cpp",
    version = "20260526.0",
)

