load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

py_library(
    name = "aes_cmac_keys",
    srcs = ["aes_cmac_keys.py"],
    deps = [
        "@tink_py//tink/proto:aes_cmac_py_pb2",
    ],
)

py_library(
    name = "hmac_keys",
    srcs = ["hmac_keys.py"],
    deps = [
        "@tink_py//tink/proto:common_py_pb2",
        "@tink_py//tink/proto:hmac_py_pb2",
    ],
)

py_test(
    name = "creation_consistency_test",
    srcs = ["creation_consistency_test.py"],
    deps = [
        ":aes_cmac_keys",
        ":hmac_keys",
        requirement("absl-py"),
        "//tink_config",
        "//util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_test(
    name = "evaluation_consistency_test",
    srcs = ["evaluation_consistency_test.py"],
    deps = [
        ":aes_cmac_keys",
        ":hmac_keys",
        requirement("absl-py"),
        "//tink_config",
        "//util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)
