load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

go_library(
    name = "kms",
    srcs = ["kms.go"],
    importpath = "github.com/tink-crypto/tink-cross-lang-tests/go/kms",
    deps = [
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_tink_crypto_tink_go_awskms_v2//integration/awskms",
        "@com_github_tink_crypto_tink_go_gcpkms_v2//integration/gcpkms",
        "@com_github_tink_crypto_tink_go_hcvault_v2//integration/hcvault",
        "@com_github_tink_crypto_tink_go_v2//core/registry",
        "@com_github_tink_crypto_tink_go_v2//testing/fakekms",
        "@com_github_tink_crypto_tink_go_v2//tink",
        "@org_golang_google_api//option",
    ],
)
