load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_testonly = 1,
    default_visibility = ["//:__subpackages__"],
)

licenses(["notice"])

py_library(
    name = "aes_eax_keys",
    srcs = ["aes_eax_keys.py"],
    deps = [
        "//cross_language:test_key",
        "@tink_py//tink/proto:aes_eax_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_library(
    name = "aes_gcm_keys",
    srcs = ["aes_gcm_keys.py"],
    deps = [
        "//cross_language:test_key",
        "@tink_py//tink/proto:aes_gcm_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_library(
    name = "xchacha20_poly1305_keys",
    srcs = ["xchacha20_poly1305_keys.py"],
    deps = [
        "@tink_py//tink/proto:tink_py_pb2",
        "@tink_py//tink/proto:xchacha20_poly1305_py_pb2",
        "//cross_language:test_key",
    ],
)

py_library(
    name = "chacha20_poly1305_keys",
    srcs = ["chacha20_poly1305_keys.py"],
    deps = [
        "@tink_py//tink/proto:chacha20_poly1305_py_pb2",
        "@tink_py//tink/proto:tink_py_pb2",
        "//cross_language:test_key",
    ],
)

py_test(
    name = "creation_consistency_test",
    srcs = ["creation_consistency_test.py"],
    deps = [
        ":aes_eax_keys",
        ":aes_gcm_keys",
        ":chacha20_poly1305_keys",
        ":xchacha20_poly1305_keys",
        requirement("absl-py"),
        "//cross_language:test_key",
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)

py_test(
    name = "evaluation_consistency_test",
    srcs = ["evaluation_consistency_test.py"],
    deps = [
        ":aes_eax_keys",
        ":aes_gcm_keys",
        ":chacha20_poly1305_keys",
        ":xchacha20_poly1305_keys",
        requirement("absl-py"),
        "//cross_language:test_key",
        "//cross_language/tink_config",
        "//cross_language/util:testing_servers",
        "@tink_py//tink:tink_python",
        "@tink_py//tink/proto:tink_py_pb2",
    ],
)
